fix white bloc when scroll on mobile/tablet

--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,4 +1,5 @@
 body {
+  height: 100%;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -11,6 +12,16 @@ body {
   color: var(--color);
   border-radius: var(--border-radius);
   font-family: 'Poppins', sans-serif;  
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
 }
 
 html {
